java updates to use api request context